Line no longer highlighted on error when executing scripts from text editor #120859

Closed
opened 2024-04-20 19:56:23 +02:00 by Dmitry C. · 4 comments

System: Windows 10
Broken: Blender 4.1.0, 4.2.0-alpha-main-026f8e8bdf68
Worked: Blender 4.0.2

Open blender, switch to text editor, create new text, type:

pass
blah
pass

Execute with the play button.

In previous versions, the cursor would move to the end of the second line.
Starting from 4.1.0 it always ends up at the bottom.

System: Windows 10 Broken: Blender 4.1.0, 4.2.0-alpha-main-026f8e8bdf68 Worked: Blender 4.0.2 Open blender, switch to text editor, create new text, type: ``` pass blah pass ``` Execute with the play button. In previous versions, the cursor would move to the end of the second line. Starting from 4.1.0 it always ends up at the bottom.
Dmitry C. added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-20 19:56:24 +02:00
Member

Caused by 9903a692cc cc @ideasman42

This change made text editor to only jump to lines when the python exception is "Syntax Error" instead all errors that can be pointed to a line.

Consider this as a high priority since it's broken recently.

Caused by 9903a692cc97581f324128ac1cb4cf3 cc @ideasman42 This change made text editor to only jump to lines when the python exception is "Syntax Error" instead all errors that can be pointed to a line. Consider this as a high priority since it's broken recently.
YimingWu added
Module
Python API
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-04-22 04:32:21 +02:00

This is a regression caused when moving from Python 3.10 to 3.11 (tested 172a6d65a60c8647b49763568e1c76e2b00e970c with both versions of Python and the issue only happens with Python 3.11).

This is a regression caused when moving from Python 3.10 to 3.11 (tested `172a6d65a60c8647b49763568e1c76e2b00e970c` with both versions of Python and the issue only happens with Python 3.11).
Member

Then I guess newer version of python didn't report the same exception as Syntax Error. I'll take a look at how to fix this.

Then I guess newer version of python didn't report the same exception as Syntax Error. I'll take a look at how to fix this.

@ChengduLittleA I have a fix prepared, committing shortly.

@ChengduLittleA I have a fix prepared, committing shortly.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-23 10:19:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120859
No description provided.